--- a/Website_1/style.css
+++ b/Website_1/style.css
@@ -14,6 +14,15 @@ html,body{
     height: 100%;
 }
 
+#cursor{
+    height: 25px;
+    width: 25px;
+    background-color: #95C11E;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 99;
+}
+
 #nav{
     height: 130px;
     width: 100%;
@@ -91,4 +100,22 @@ z-index: 10;
     font-size: 20px;
     font-weight: 500;
     width: 700px;
+}
+
+
+#page2{
+    height: 100vh;
+    width: 100%;
+    z-index: 10;
+}
+
+
+#cursor-blur{
+    height: 400px;
+    width: 400px;
+    background-color: #96c11e3c;
+    border-radius: 50%;
+    position: fixed;
+    filter: blur(50px);
+    z-index: 9;
 }
