--- a/Website_1/style.css
+++ b/Website_1/style.css
@@ -74,6 +74,29 @@ text-align: center;
 z-index: 10;
 }
 
+#page1 #arrow {
+  height: 250px;
+  width: 250px;
+  background-color: transparent;
+  border: 2px solid #95c11e;
+  position: absolute;
+  display: flex;
+  left: -2%;
+  bottom: 0%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: all ease 0.5s;
+}
+#page1 #arrow i {
+  font-size: 50px;
+  font-weight: 100;
+}
+#page1 #arrow:hover {
+  scale: 0.4;
+  background-color: #95c11e;
+}
+
 #page1 h1{
     font-size: 7.5vw;
     font-weight:900;
@@ -269,3 +292,190 @@ z-index: 10;
   .card:hover{
     transform: rotate3d(-1,1,0,20deg);
   }
+
+ #green-div{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30vh;
+  background: linear-gradient(to left bottom, #119f3a, #ace022);
+ }
+
+ #green-div h4{
+  font-size: 27px;
+  color: black;
+  width: 45%;
+  text-align: center;
+  font-weight: 800;
+  line-height: 50px;
+  text-transform: uppercase;
+
+ }
+
+ #green-div img{
+  object-fit: cover;
+  width: 14%;
+  height: 100%;
+ }
+
+ #page3{
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+ }
+
+ #page3 p{
+  font-size: 35px;
+  font-weight: 700;
+  width:60%;
+  line-height: 45px;
+  text-align: center;
+ }
+
+ #page3 img{
+  position: absolute;
+  height: 60px;
+ }
+
+ #page3 #colon1{
+  left: 10%;
+  top: 20%;
+ }
+ #page3 #colon2{
+  right: 10%;
+  bottom: 25%;
+ }
+
+ #page4{
+  height: 30vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:70px;
+  position: relative;
+ }
+
+ .elem{
+  height: 70%;
+  width: 26%;
+  overflow: hidden;
+  border-radius: 20px;
+  position: relative;
+ }
+ 
+ .elem h2{
+  height: 100%;
+  width: 100%;
+  background-color: #95C11E;
+  color: #000;
+  display: flex;
+  font-weight: 800;
+  font-size: 28px;
+  align-items:center ;
+  justify-content: center;
+  position: absolute;
+  transition: all ease 0.5s;
+  text-transform: uppercase;
+  z-index: 10;
+ }
+ .elem img{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  transition: all ease 0.5s;
+  scale: 1.1;
+ }
+
+ .elem:hover h2{
+  color: white;
+  background-color: transparent;
+ }
+
+ .elem:hover img{
+ scale: 1;
+ }
+
+ #page4 h1{
+  position: absolute;
+  font-size: 78px;
+  top: -15%;
+  font-weight: 900;
+  font-family: gilroy;
+  color: #000;
+  -webkit-text-stroke:2px #fff ;
+ }
+
+ #footer{
+  height: 40vh;
+  width: 100%;
+  background: linear-gradient(to left bottom, #119f3a 0%, #a3d421 80%);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 6.5vw;
+  padding: 0 100px;
+  position: relative;
+ }
+
+ #footer > img{
+  position: absolute;
+  left: 0;
+  height: 100%;
+  z-index: 0;
+ }
+
+ #f1 img{
+  height: 100px;
+  transition: all ease 0.4s;
+ }
+
+ #f1,#f2,#f3,#f4{
+width: fit-content;
+position: relative;
+z-index: 99;
+cursor: pointer;
+ }
+
+
+ #f2 h3{
+  font-size: 1.6vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 900;
+  margin-bottom: 8px;
+  cursor: pointer;
+ }
+ #f3 h3{
+  font-size: 1.6vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #444141;
+  font-weight: 700;
+  margin-bottom: 8px;
+  cursor: pointer;
+ }
+ #f4 h4{
+  font-size: 1vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 8px;
+  transition: all ease 0.4s;
+ }
+
+#f4 h4:hover{
+scale: 1.2;
+}
+
+
+#footer .fot-1:hover{
+  scale: 1.3;
+}
