--- a/Website_1/style.css
+++ b/Website_1/style.css
@@ -14,6 +14,22 @@ html,body{
     height: 100%;
 }
 
+*::selection{
+  background-color: white;
+  color: #95C11E;
+}
+
+body::-webkit-scrollbar{
+  display: block;
+  width: 8px;
+  background:#95C11E;
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: white;
+  border-radius: 50px;
+}
+
 #cursor{
     height: 20px;
   width: 20px;
