--- a/website_2/style.css
+++ b/website_2/style.css
@@ -118,7 +118,7 @@ line-height: 25px;
 #features{
     padding: 5vw 8vw 0 8vw;
     text-align: center;
-    color:rgb(21,21,100);
+    color: rgb(44,44,80);
 }
 
 #features #card{
@@ -153,3 +153,53 @@ padding: 20px;
     color: rgb(70,70,87);
 }
 
+#course{
+    padding: 8vw 8vw 0 8vw;
+    text-align: center;
+}
+
+#course h1{
+    color: rgb(44,44,80);
+}
+#course #course-box{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
+  grid-gap: 1rem;
+  margin-top: 50px;
+}
+
+#course .courses{
+    text-align: start;
+    background-color: #f9f9f9;
+    height: 100%;
+    position: relative;
+}
+
+#course .courses img{
+    width: 100%;
+    height: 60%;
+    background-size: cover;
+    background-position: center;
+
+}
+
+#course .courses .detail{
+    padding: 15px 15px 0 15px;
+}
+#course .courses .detail i{
+    color: #FDC938;
+    font-size: .9rem;
+}
+
+#course .courses .cost{
+    background-color: rgb(74,74,136);
+    color: #fff;
+    line-height:70px;
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    border-radius: 50%;
+    position: absolute;
+    right: 15px;
+    bottom: 100px;
+}
