--- a/website_2/style.css
+++ b/website_2/style.css
@@ -25,6 +25,7 @@ nav{
     background-color: #fff;
     position: fixed;
     box-shadow: 2px 2px 10px rgba(0, 0,0,0.15);
+    z-index: 999;
 }
 nav img{
     width: 150px;
@@ -154,7 +155,7 @@ padding: 20px;
 }
 
 #course{
-    padding: 8vw 8vw 0 8vw;
+    padding: 8vw 8vw 8vw 8vw;
     text-align: center;
 }
 
@@ -182,6 +183,9 @@ padding: 20px;
     background-position: center;
 
 }
+#course .courses img:hover{
+    transform: rotate3d(-1,1,0,20deg);
+}
 
 #course .courses .detail{
     padding: 15px 15px 0 15px;
@@ -202,4 +206,218 @@ padding: 20px;
     position: absolute;
     right: 15px;
     bottom: 100px;
+}
+
+#registration{
+    padding: 6vw 8vw 6vw 8vw;
+    background-image: linear-gradient(rgba(90,112,168,0.5),rgba(81,91,233,0.5)),url(./images/signup.jpg);
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#registration .remainder{
+    color: #fff;
+}
+#registration .remainder h1{
+    color: #fff;
+}
+
+#registration .remainder .time{
+    display: flex;
+    margin-top: 40px;
+}
+
+#registration .remainder .time .date{
+    text-align: center;
+    padding: 13px 33px;
+    background-color: rgba(255,255,255,0.5);
+    backdrop-filter: blur(4px);
+    box-shadow: 0 8px 32px 0 rgba(31,38,135,0.37);
+    border-radius: 10px;
+    margin:0 5px 10px 5px ;
+    border: 1px solid rgba(255, 255,255,0.18);
+    font-size:1.1rem ;
+    font-weight: 600;
+}
+
+#registration .form{
+    background-color: #fff;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    box-shadow:0 8px 32px 0 rgba(31,38,135,0.37) ;
+}
+
+#registration .form input{
+    margin: 15px 0;
+    padding: 15px 10px;
+    border: 1px solid rgb(84,40,241);
+    outline: none;
+}
+
+
+#registration .form input::placeholder{
+    color: #413c3c;
+    font-weight: 500;
+    font-size: 0.9rem;
+}
+
+#registration .form .btn{
+    margin-top: 20px;
+}
+
+#registration .form .yellow{
+    text-decoration: none;
+    font-size: 0.9rem;
+    padding: 13px 35px;
+    background-color: #fff;
+    font-weight: 600;
+    border-radius: 30px;
+    margin: 5px;
+    color: #fff;
+    background-color:#FDC938;
+    transition: 0.3s ease;
+}
+#registration .form .yellow:hover{
+    color:rgb(21,21,100);
+    background: #fff;
+}
+
+#experts{
+    padding: 8vw 8vw 8vw 8vw;
+    text-align: center;
+    color: rgb(44,44,80);
+}
+
+#experts .expert-box{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 1rem;
+    margin-top: 50px;
+}
+
+#experts .expert-box .profile{
+    background: #fafafa;
+    padding:30px 10px ;
+}
+#experts .expert-box .profile img:hover{
+    transform: rotate3d(-1,1,0,20deg);
+}
+
+#experts .expert-box .profile .pro-links{
+    margin-top: 10px;
+}
+
+.pro-links i{
+    padding: 10px 13px;
+    border:1px solid rgb(21,21,100);
+    cursor: pointer;
+    transition: all ease 0.3s;
+}
+
+.pro-links i:hover{
+    background:rgb(21,21,100) ;
+    color: white;
+}
+
+footer{
+    padding: 8vw;
+    background-color: #101c32;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+footer .footer-col{
+    padding-bottom: 40px;
+
+}
+
+footer h3{
+    color: rgb(241,240,245);
+    font-weight: 600;
+    padding-bottom:20px ;
+}
+
+footer li{
+    list-style: none;
+    color: #7b838a;
+    padding: 10px 0;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+footer li:hover{
+    color:rgb(241,240,245);
+}
+
+footer p{
+    color: #7b838a;
+}
+
+footer .subscribe{
+    margin-top: 20px;
+}
+
+footer input{
+    width: 220px;
+    padding: 15px 10px;
+    background: #344f6c;
+    border: none;
+    outline: none;
+    color: #fff;
+}
+
+footer .subscribe a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    padding: 12px 15px;
+    background-color: #fff;
+    font-weight: 600;
+}
+
+footer .subscribe a.yellow{
+color: #2c2c2c;
+background-color:#FDC938;
+transition: 0.3s ease;
+}
+
+footer .subscribe a.yellow:hover{
+    color:rgb(21,21,100);
+    background: #fff;
+}
+
+footer .copyright{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+footer .copyright p{
+    color: #fff;
+}
+
+footer .copyright .pro-links{
+    margin-top: 0px;
+}
+
+footer .copyright .pro-links i{
+ background-color: #5f7185;
+ color: #fff;
+}
+
+footer .copyright  .pro-links i:hover{
+    background-color:#FDC938 ;
+    color: #2c2c2c;
 }
