--- a/website_2/style.css
+++ b/website_2/style.css
@@ -524,6 +524,63 @@ footer .copyright  .pro-links i:hover{
 
 }
 
+#blog-container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 8vw;
+}
+
+#blog-container .blogs{
+    width: 60%;
+}
+#blog-container .blogs img{
+    width: 100%;
+    border-radius: 19px;
+}
+#blog-container .blogs .post{
+    padding-bottom: 60px;
+}
+#blog-container .blogs .post h3{
+    color: #293038;
+    padding: 15px 0 10px 0;
+}
+#blog-container .blogs .post p{
+    color: #757575;
+    padding-bottom: 20px;
+}
+#blog-container .blogs .post a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    padding: 13px 35px;
+    background-color: rgb(21,21,100);
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 600;
+}
+
+#blog-container .cate{
+    width:30%;
+}
+#blog-container .cate h2{
+padding-bottom: 7px;
+}
+#blog-container .cate a{
+text-decoration: none;
+color: #757373;
+font-weight: 500;
+line-height: 45px;
+}
+
+#blog-container .blogpost{
+     width: 60%;
+     margin: 0 auto;
+}
+#blog-container .blogpost p{
+    text-align: justify;
+    padding-bottom: 30px !important;
+}
+
 /* //home section */
 
 /* i pad view */
@@ -617,7 +674,24 @@ footer .copyright  .pro-links i:hover{
     width: 50px;
     height: auto;
  }
+
+ /* blog */
+ #blog-container{
+    padding: 8vw 4vw;
+ }
+
+ #blog-container .blogpost{
+    width: 100%;
+    margin-top:30px;
+ }
+ #blog-container .blogpost img{
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+ }
+
     }
+
     /* for mobile */
      
     @media (max-width:475px){
@@ -677,5 +751,27 @@ footer .copyright  .pro-links i:hover{
     margin: 10px 15px;
     height: auto;
  }
+
+ /* blog */
+ #blog-container{
+    flex-direction: column;
+ }
+ #blog-container .blogs{
+    width: 100%;
+ }
+ #blog-container .cate{
+    width: 100%;
+ }
+
+ #blog-container .blogpost{
+    width: 100%;
+    margin-top:70px;
+ }
+ #blog-container .blogpost img{
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+ }
+
     }
     
