--- a/website_2/style.css
+++ b/website_2/style.css
@@ -581,6 +581,97 @@ line-height: 45px;
     padding-bottom: 30px !important;
 }
 
+/* course inner0 */
+#course-inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: self-start;
+    padding: 8vw;
+}
+#course-inner h3{
+    padding: 35px 0 25px 0;
+    color: #293038;
+}
+#course-inner p{
+
+    color: #64626e;
+}
+#course-inner hr{
+
+ height: 1px;
+ background:rgba(236, 226,229,0.5) ;
+ margin-top: 40px;
+}
+#course-inner .overview{
+    width: 70%;
+}
+#course-inner .overview .course-img{
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+
+#course-inner .overview .course-head{
+    display: flex;
+    align-items: self-start;
+    justify-content: space-between;
+}
+
+#course-inner .overview .course-head .c-name{
+    width: 70%;
+}
+#course-inner .overview .course-head .c-name h2{
+    color: #293038;
+}
+#course-inner .overview .course-head .c-name .star{
+    margin: 6px 0px;
+}
+
+#course-inner .overview .course-head .c-name .star i{
+    color: #FDC938;
+    font-size: 0.9rem;
+}
+
+#course-inner .overview .course-head .c-name p{
+    font-size: 15px;
+}
+
+
+#course-inner .overview .course-head span{
+    padding: 16px 22px;
+    border-radius: 5px;
+    color: #5838fc;
+    font-size: 24px;
+    font-weight: 700;
+    background-color: rgba(88,56,252,0.1);
+}
+
+
+#course-inner .learn p{
+    font-size: 15px;
+    padding-bottom: 15px;
+}
+#course-inner .learn p i{
+    color: #654ce4;
+    font-weight: 700;
+    margin-right: 20px;
+}
+
+#course-inner .tutor{
+    display: flex;
+}
+#course-inner .tutor img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+#course-inner .tutor h5{
+    font-size: 15px;
+}
 /* //home section */
 
 /* i pad view */
