--- a/website_2/style.css
+++ b/website_2/style.css
@@ -595,6 +595,7 @@ line-height: 45px;
 #course-inner p{
 
     color: #64626e;
+    text-align: justify;
 }
 #course-inner hr{
 
@@ -607,7 +608,7 @@ line-height: 45px;
 }
 #course-inner .overview .course-img{
     width: 100%;
-    height: 60vh;
+    height: 100%;
     object-fit: cover;
     border-radius: 12px;
     margin-bottom: 20px;
@@ -671,6 +672,171 @@ line-height: 45px;
 
 #course-inner .tutor h5{
     font-size: 15px;
+}
+
+#course-inner .enroll{
+    width: 300px;
+    padding: 0 30px 30px 30px;
+    border-radius: 1px;
+    box-shadow: 0px 20px 40px 0  rgb(11 2 55 /8%);
+
+}
+#course-inner .enroll h3{
+    padding-bottom: 10px;
+}
+
+#course-inner .enroll p{
+    font-size: 15px;
+    color: #64626e;
+    margin: 15px 0;
+}
+#course-inner .enroll p i{
+    color: #2c234d;
+    margin-right: 18px;
+     width: 16px; 
+     height: 16px;
+    line-height: 16px;
+    text-align: center; 
+}
+#course-inner .enroll  .enroll-btn{
+    padding: 25px 0 20px 0;
+    margin: auto;
+    text-align: center;
+}
+#course-inner .enroll  .enroll-btn a{
+    padding: 13px 45px;
+    text-decoration: none;
+font-size: .8rem;
+font-weight: 600;
+color: #fff;
+background-color: rgb(50,50,136);
+    text-align: center;
+}
+
+
+#contact{
+    padding: 8vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+#contact .getin{
+    width: 350px;
+}
+#contact .getin h2{
+    color: #2c234d;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: .8;
+    margin-bottom: 16px;
+}
+#contact .getin p{
+    color: #686f75;
+    line-height: 24px;
+    margin-bottom: 33px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #e5e4ed;
+}
+
+#contact .getin h3{
+    color: #2c234d;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+
+#contact .getin .getin-details div{
+    display: flex;
+}
+
+#contact .getin .getin-details div .get{
+    font-size: 16px;
+    line-height: 22px;
+    margin-right: 20px;
+    color: #5838fc;
+}
+
+#contact .getin .getin-details div p{
+    font-size: 14px;
+    border-bottom: none;
+    line-height: 22px;
+    margin-bottom: 15px;
+}
+
+#contact .getin .getin-details .pro-links i{
+    margin-right: 8px;
+}
+
+#contact .form{
+    width: 60%;
+    background: #f7f6fa;
+    padding: 40px;
+    border-radius: 10px;
+}
+
+#contact .form h4{
+    font-size: 24px;
+    color: #2c234d;
+    line-height: 30px;
+    margin-bottom: 8px;
+}
+#contact .form p{
+    color: #686f75;
+    line-height: 24px;
+    padding-bottom: 25px; 
+}
+
+#contact .form .form-row{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+#contact .form .form-row input{
+    width: 48%;
+    font-size: 14px;
+    font-weight: 400;
+    border: none;
+    background: white;
+    color: #7e7c87;
+    outline: none;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+#contact .form .form-col input,
+#contact .form .form-col textarea{
+    width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    border: none;
+    background: white;
+    color: #7e7c87;
+    outline: none;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+
+#contact .form button{
+    font-size: .9rem;
+    padding: 13px 25px;
+    background-color: rgb(21,21,100);
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+    color: white;
+}
+
+#map
+{
+    width: 100%;
+    height: 70vh;
+}
+
+#map iframe{
+    width:100%;
+    height: 100%;
 }
 /* //home section */
 
@@ -781,6 +947,35 @@ line-height: 45px;
     object-fit: cover;
  }
 
+ #course-inner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8vw 4vw;
+ }
+
+ #course-inner .overview{
+    width: 100%;
+ }
+ #course-inner .overview .course-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+
+#course-inner .enroll{
+    margin-top:25px ;
+}
+
+#contact{
+    padding: 8vw 4vw;
+}
+#contact .getin{
+    width: 250px;
+}
     }
 
     /* for mobile */
@@ -864,5 +1059,41 @@ line-height: 45px;
     object-fit: cover;
  }
 
+ #course-inner .overview .course-head .c-name{
+    width: 50%;
+ }
+ #course-inner .overview .course-head .c-name h2{
+   font-size: 22px;
+ }
+ #course-inner .overview .course-head  span{
+   font-size: 22px;
+ }
+ #course-inner .enroll{
+    width: 100%;
+ }
+
+ #contact{
+    padding: 8vw 4vw;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+}
+#contact .getin{
+    width: 100%;
+    margin-bottom: 30px;
+}
+#contact .form{
+    width: 100%;
+    padding: 40px 30px;
+}
+#contact .form .form-row{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+}
+#contact .form .form-row input{
+    width: 100%;
+}
     }
     
