--- a/Website_3/style.css
+++ b/Website_3/style.css
@@ -1,6 +1,16 @@
 @font-face {
-    font-family:New ;
+    font-family:neu ;
     src: url(./NeueHaasDisplayMediu.ttf);
+}
+@font-face {
+    font-family:neu;
+    font-weight: 100;
+    src: url(./NeueHaasDisplayLight.ttf);
+}
+@font-face {
+    font-family:neu;
+    font-weight: 200;
+    src: url(./NeueHaasDisplayRoman.ttf);
 }
 
 *{
@@ -43,6 +53,7 @@ html,body{
     border: solid 1px #000000bb;
     border-radius: 50px;
     font-weight: 500;
+    font-family: neu;
     color: #000000bb;
     position: relative;
     font-size: 18px;
@@ -94,16 +105,193 @@ html,body{
     width: 25vw;
     font-size: 1.8vw;
     line-height: 2vw;
+    font-family: neu;
 }
 
 #center h1{
     font-size: 10vw;
     text-align: right;
     line-height: 8vw;
+    font-family: neu;
 }
 
 #page1 video{
     width: 100%;
     border-radius: 30px;
     margin-top: 4vw;
+    position: relative;
+}
+
+#hero-shape{
+    position: absolute;
+    height: 36vw;
+    width: 46vw;
+    right: 0;
+    top: 65vh;
+}
+
+#hero-1{
+    height: 100%;
+    width: 100%;
+    background-color: #fe302a;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    filter: blur(10px);
+    position: absolute;
+}
+#hero-2{
+    height: 30vw;
+    width: 30vw;
+    background:linear-gradient(#fe302a,#fe3f0a);
+    border-radius: 50%;
+    filter: blur(25px);
+    position: absolute;
+    animation-name: anime2;
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+#hero-3{
+    height: 30vw;
+    width: 30vw;
+    background:linear-gradient(#fe302a,#fe3f0a);
+border-radius: 50%;
+    filter: blur(25px);
+    position: absolute;
+
+    animation-name: anime1;
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+@keyframes anime1{
+    from{
+        transform: translate(55%,-3%);
+    }
+    to{
+        transform: translate(0%,10%);
+    }
+}
+@keyframes anime2{
+    from{
+        transform: translate(5%,-5%);
+    }
+    to{
+        transform: translate(-20%,30%);
+    }
+}
+
+#page2{
+    width: 100%;
+    min-height: 100vh;
+    padding: 8vw 0;
+    position: relative;
+}
+#moving-text{
+    white-space: nowrap;
+    overflow-x: auto;
+}
+#moving-text::-webkit-scrollbar{
+    display: none;
+}
+.con{
+    white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+}
+
+#moving-text h1{
+font-size: 9vw;
+font-family: neu;
+display: inline-block;
+
+}
+
+#gola{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: #fe302a;
+    display: inline-block;
+    margin: 1vw 2vw;
+}
+
+@keyframes move{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
+
+#page2-bottom{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 4.5vw;
+    position: relative;
+    z-index: 9;
+}
+#page2-bottom h1{
+    font-size: 4vw;
+    line-height: 4vw;
+    font-family: neu;
+    width: 60%;
+}
+
+#bottom-part2{
+    width: 20%;
+
+}
+
+#bottom-part2 img{
+    width: 100%;
+    border-radius: 15px;
+}
+#bottom-part2 p{
+    font-weight: 200;
+    margin-top: 2vw;
+    font-size: 1vw;
+    font-family: neu;
+}
+
+#page2 #gooey{
+    height: 32vw;
+    width: 32vw;
+    border-radius: 50%;
+    position: absolute;
+    top: 58%;
+    left: 25%;
+    background:linear-gradient(to top right,#fe302a,#ff5c0b);
+    filter: blur(20px);
+    animation-name: gooey;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+}
+
+@keyframes gooey{
+    from{
+        filter: blur(20px);
+        transform: translate(10%,-10%) skew(0);
+    }
+    to{
+        filter: blur(30px);
+        transform: translate(-10%,10%) skew(-12deg);
+    }
+}
+
+#page3{
+    width: 100%;
+    height: 100vh;
 }
