--- a/Website_3/style.css
+++ b/Website_3/style.css
@@ -358,6 +358,7 @@ display: inline-block;
 #page4 #left{
     height: 100%;
     width: 50%;
+    /* background-color:; */
     padding-top: 150px;
   padding-right: 30px;
   padding-bottom: 50px;
@@ -375,11 +376,10 @@ display: inline-block;
     font-size: 1rem;
     font-weight: 200;
     font-family: neu;
-    padding-top: 30px;
+    padding-top: 20px;
 }
 
 #right1 {
-    position: relative;
     object-fit: contain;
     width: 50%;
 
@@ -390,6 +390,4 @@ display: inline-block;
     border-radius: 20px;
     width: 100%;
     height: 100%;
-
-    
 }
