--- a/Website_3/style.css
+++ b/Website_3/style.css
@@ -24,6 +24,11 @@ html,body{
     width: 100%;
 }
 
+#main{
+    /* background-color: black; */
+    position: relative;
+    z-index: 20;
+}
 
 #page1{
     min-height: 100vh;
@@ -188,6 +193,7 @@ border-radius: 50%;
 #page2{
     width: 100%;
     min-height: 100vh;
+    background-color:#efeae3;
     padding: 8vw 0;
     position: relative;
 }
@@ -343,16 +349,18 @@ display: inline-block;
     background-size: cover;
     background-position: center;
 }
+.con2{
+    height:100vh;
+    background-color: #efeae3;
+}
 
 #page4{
-    /* width: 100vw; */
     height: 100vh;
     background-color: black;
     display: flex;
     justify-content: space-between;
     border-radius: 20px;
     margin: 13px;
-    /* overflow-x: hidden; */
 }
 
 #page4 #left{
@@ -390,4 +398,202 @@ display: inline-block;
     border-radius: 20px;
     width: 100%;
     height: 100%;
+}
+
+.page5{
+    height: 70vh;
+    width: 100%;
+    background-color: antiquewhite;
+    padding:10vw 2vw;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    border-left: 1px solid #aeadad;
+    width: 30%;
+  }
+
+
+
+
+
+
+
+
+.page6{
+height: 100vh;
+width: 100%;
+}
+
+#footer{
+    position: fixed;
+    height: 105vh;
+    width: 100%;
+    z-index: 9;
+    bottom: 0;
+    display: flex;
+    justify-content:flex-end ;
+    flex-direction: column;
+    background-color: black;
+    padding: 1vw 3vw;
+}
+
+#footer h1{
+    font-size: 23vw;
+    font-family: neu;
+   color: white;
+
+}
+
+#footer-div{
+    height: 20vh;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: space-between;
+    padding: 3vw 2vw;
+    z-index: 100;
+
+
+}
+
+#footer-div .footer-left{
+    color: white;
+    font-family: neu;
+
+}
+
+.footer-left h3{
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 30px;
+}
+#footer-div .footer-right{
+    color: white;
+    font-family: neu;
+
+
+}
+.footer-right p{
+    font-weight: 300;
+    font-size: 20px;
+}
+.inp{
+    width: 100%;
+    border-bottom: 1px solid rgb(212, 146, 132);
+}
+input{
+    width: 90%;
+    margin-top: 2.5vw;
+    font-size: 1.3vw;
+    color: white;
+    font-family: neuhassmediu;
+    background-color: transparent;
+    border: none;
+    padding-bottom: 0.4vw;
+}
+input:focus{
+    color: white;
+    font-size: 1.3vw;
+    font-family: neuhassmediu;
+    outline: none;
+}
+
+::placeholder{
+    color: rgb(212, 146, 132);
+    font-size: 1.3vw;
+    font-weight: 100;
+    font-family: neuhassmediu;
+}
+
+
+.footer-right #useless{
+    border-top: 1px solid #dadada55;
+    height: 10vh;
+    width: 100%;
+}
+#footer-bottom{
+    border-top: 1px solid #dadada;
+    height: 10vh;
+    width: 100%;
+}
+
+#footer-bottom .footer-btm2{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 1vw 2vw;
+}
+#footer-bottom .footer-btm2 h3{
+    font-size: 20px;
+    font-family: neu;
+    font-weight: 300;
+}
+
+
+#hero-shape1{
+    z-index: 9;
+    position: absolute;
+    height: 36vw;
+    width: 100vw;
+    right: 0;
+    top: 0;
+}
+
+#hero-01{
+    height: 50%;
+    width: 100%;
+    background-color: #fe302a;
+    border-top-right-radius: 60%;
+    border-bottom-right-radius: 60%;
+    filter: blur(10px);
+    position: absolute;
+}
+#hero-02{
+    height: 10vw;
+    width : 100%;
+    background:linear-gradient(#fe302a,#fe3f0a);
+    border-radius: 50%;
+    filter: blur(25px);
+    position: absolute;
+    animation-name: anime02;
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+#hero-03{
+    height: 30vw;
+    width: 100%;
+    background:linear-gradient(#fe302a,#fe3f0a);
+border-radius: 50%;
+    filter: blur(25px);
+    position: absolute;
+
+    animation-name: anime01;
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+@keyframes anime01{
+    from{
+        transform: translate(5%,3%);
+    }
+    to{
+        transform: translate(5%,-5%);
+    }
+}
+@keyframes anime02{
+    from{
+        transform: translate(5%,-5%);
+    }
+    to{
+        transform: translate(20%,70%);
+    }
 }
