--- a/Website_3/style.css
+++ b/Website_3/style.css
@@ -401,12 +401,36 @@ display: inline-block;
 }
 
 .page5{
-    height: 70vh;
+    height: 90vh;
     width: 100%;
     background-color: antiquewhite;
     padding:10vw 2vw;
 }
 
+.cir{
+    width: 100%;
+    height: 100%;
+    font-size: 8px;
+    bottom: 0;
+    background-color: antiquewhite;
+ position: relative;
+top: 10px;
+
+    padding: 1vw 2vw;
+    display: flex;
+}
+.cir h1{
+    font-size: 15px; 
+    font-family: neu;
+    font-weight: 100;
+}
+.cir .cir1{
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: #fe302a;
+    margin-right:10px;
+}
 .swiper {
     width: 100%;
     height: 100%;
@@ -415,6 +439,14 @@ display: inline-block;
   .swiper-slide {
     border-left: 1px solid #aeadad;
     width: 30%;
+    padding:0vw 2vw;
+  }
+
+  .swiper-slide p{
+    font-size:20px;
+    font-family: neu;
+    color:black;
+    font-weight: 100;
   }
 
 
