--- a/Website_4/style.css
+++ b/Website_4/style.css
@@ -138,3 +138,151 @@ html,body{
     border-radius: 50%;
     background-color:white;
 }
+
+#hero2{
+    padding-top: 150px;
+    width: 100%;
+    background-color: black;
+    padding-left: 2vw;
+    padding-right: 12vw;
+}
+
+#hero2 #elem{
+    width: 100%;
+    border-top: 1px solid #888;
+    color: white;
+    padding: 3vw 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+
+}
+#elem h1{
+    font-size: 8vw;
+    text-transform: uppercase;
+    font-family: General;
+    opacity: .6;
+}
+#elem h5{
+font-size: 1vw;
+font-family: General;
+opacity: .9;
+}
+#elem img{
+    position: absolute;
+    height: 150%;
+    z-index: 999;
+    display: none;
+}
+
+.lastelem{
+    border-bottom: 1px solid #888;
+}
+#about{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    padding-top: 230px;
+}
+#about .elepart{
+    padding-left: 30vw;
+    color: white;
+    display: flex;
+    padding-right:8vw;
+    gap: 70px;
+}
+
+#about .elepart img{
+    width: 240px;
+    object-fit: contain;
+}
+
+.subetxt{
+    width: 28rem;
+}
+.subetxt h4{
+    text-transform: uppercase;
+margin-bottom:5px;
+opacity: .6;
+font-family: General-medium;
+font-weight: 300;
+font-size: 13px;
+} 
+
+.subetxt p{
+    line-height: 1.7;
+    font-family: General;
+    font-size:18px;
+    margin-bottom: 30px;
+}
+
+.subetxt a{
+    text-decoration: none;
+    color: white;
+    border: 1px solid #fff;
+    border-radius: 100px;
+    padding: 8px  26px;
+    font-family: General;
+}
+
+#subscribe{
+    width: 100%;
+    background-color: black;
+    color: #fff;
+    padding: 4vw 3vw;
+    padding-bottom: 10vw;
+}
+
+#subscribe h5{
+    font-family: General;
+    font-weight: 100;
+    opacity: .7;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+#subscribe h3{
+    padding-top: 8px;
+    text-transform: uppercase;
+    font-family: General-medium;
+    font-weight: 200;
+    font-size: 15px;
+}
+
+#subscribe h3 i{
+    font-size: 18px;
+}
+
+#footer{
+    background-color: black;
+    color: white;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 2vw 3vw;
+}
+
+#footer .footerleft{
+    display: flex;
+    gap: 20px;
+}
+#footer .footerleft h4{
+    font-family: General-medium;
+    font-size: 15px;
+    font-weight:300;
+}
+#footer .footerright{
+    display: flex;
+    gap: 50px;
+}
+
+.footerright a{
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-family: General-medium;
+    font-size: 14px;
+    font-weight:300;  
+}
