--- a/Website_4/style.css
+++ b/Website_4/style.css
@@ -22,14 +22,27 @@ html,body{
 
 /* boiler palte end */
 
+#mini-circle{
+    transition:  all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    z-index: 9999;
+    border-radius: 50%;
+    background-color: white;
+}
+
 #main{
     width: 100%;
+    background-color: black;
 }
+
 
 #hero{
     width: 100%;
     height: 100vh;
     background-color: black;
+    position: relative;
 }
 
 #nav{
@@ -48,6 +61,14 @@ html,body{
     color: white;
     font-size:18px;
 
+}
+
+.loading{
+    width: fit-content;
+    overflow: hidden;
+}
+.loading .subloading{
+    transform: translateY(100%);
 }
 
 #nav h4{
@@ -75,7 +96,9 @@ html,body{
 .subtext{
     margin-left: 160px;
     width: fit-content;
-    /* background-color: aqua; */
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 .subtext p{
@@ -90,6 +113,9 @@ html,body{
     width: 100%;
     margin-top: 70px;
     padding-right:50px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 
 }
 .subheading p{
